# src/main/kotlin/com/wutsi/membership/manager/endpoint/ActivateBusinessController.kt
@@ -1,20 +1,20 @@
 package com.wutsi.membership.manager.endpoint
 
-import com.wutsi.membership.manager.`delegate`.EnableBusinessDelegate
-import com.wutsi.membership.manager.dto.EnableBusinessRequest
+import com.wutsi.membership.manager.`delegate`.ActivateBusinessDelegate
+import com.wutsi.membership.manager.dto.ActivateBusinessRequest
 import org.springframework.web.bind.`annotation`.PostMapping
 import org.springframework.web.bind.`annotation`.RequestBody
 import org.springframework.web.bind.`annotation`.RestController
 import javax.validation.Valid
 
 @RestController
-public class EnableBusinessController(
-    public val `delegate`: EnableBusinessDelegate
+public class ActivateBusinessController(
+    public val `delegate`: ActivateBusinessDelegate
 ) {
     @PostMapping("/v1/members/business")
     public fun invoke(
         @Valid @RequestBody
-        request: EnableBusinessRequest
+        request: ActivateBusinessRequest
     ) {
         delegate.invoke(request)
     }
